<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:text="@string/latitude"
            tools:layout_editor_absoluteX="180dp"
            tools:layout_editor_absoluteY="713dp" />

        <TextView
            android:id="@+id/latitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            tools:layout_editor_absoluteX="231dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/longitude"
            tools:layout_editor_absoluteX="175dp"
            tools:layout_editor_absoluteY="713dp" />

        <TextView
            android:id="@+id/longitudeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            tools:layout_editor_absoluteX="324dp"
            tools:layout_editor_absoluteY="713dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/speed"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="713dp" />

        <TextView
            android:id="@+id/speedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            tools:layout_editor_absoluteX="316dp"
            tools:layout_editor_absoluteY="713dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="32dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:onClick="SetLatLongSpeed"
            android:text="@string/start"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="315dp" />

        <Button
            android:id="@+id/stopButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:onClick="logDetailsIntoCSV"
            android:text="@string/stop"
            tools:layout_editor_absoluteX="219dp"
            tools:layout_editor_absoluteY="683dp" />
    </LinearLayout>


    <Button
        android:id="@+id/viewOnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:onClick="viewPointsOnMap"
        android:text="@string/viewOnMap" />

</LinearLayout>